# axon

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH_CHECKLIST.md  Makefile  Procfile  README.md  SECURITY.md  axon-e2e-deep.py  axon-e2e-live.py  bunfig.toml  docker-compose.yml  drizzle.config.ts  eslint.config.js  fly.toml  openapi.yaml  package.json  railway.toml  render.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
academy/: .gitignore  CORS-SETUP.md  DEPLOY.md  README.md  _headers  astro.config.mjs  package-lock.json  package.json  wrangler.toml
academy-docs/: axon-academy-master.md  build-pdf.js  style.css
admin/: dashboard.html
blog/: cache-hit-rates-17-apis.md  self-paying-research-agent-20-lines.md  why-we-built-axon.md
cli/: README.md  package.json  tsconfig.json
contracts/: AxonAgent.compiled.json  AxonAgent.sol
docs/: adding-apis.md  agent-chat-spec.md  api-reference.md  architecture.md  deploy.md  first-customer-playbook.md  launch-zero-cost.md  quickstart.md  security.md  setup-nft-agents.md  setup-privy.md  video-hero-90s.md  webhooks.md
drizzle/: 0000_init.sql  0001_subscriptions.sql  0002_agents.sql  0003_agent_pay_mode.sql  0004_request_agent_id.sql  0005_agent_pro_features.sql  0006_whatsapp.sql  0007_agent_cache.sql  0008_contact_memory.sql  0009_agent_owner_phone.sql  0010_pix_payments.sql  0011_personas.sql  0012_smart_routing.sql  0013_affiliates.sql  0014_pause_and_handoff.sql  0015_business_info.sql  0016_agent_catalog.sql
emails/: balance-low.md  deposit-received.md  rate-limit-warning.md  subscription-downgraded.md  subscription-expiring-soon.md  subscription-renewed.md  welcome.md
examples/: README.md  curl-minimal.sh  go-minimal.go  mcp-claude-desktop-config.json  python-minimal.py  ts-minimal.ts  vercel-ai-agent.ts
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/axon_autogen/: __init__.py  tools.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/axon_crewai/: __init__.py  tools.py
integrations/langchain-python/: README.md  pyproject.toml
integrations/langchain-python/axon_langchain/: __init__.py  tools.py
integrations/pydantic-ai/: README.md  pyproject.toml
integrations/pydantic-ai/axon_pydantic_ai/: __init__.py  tools.py
integrations/smolagents/: README.md  pyproject.toml
integrations/smolagents/axon_smolagents/: __init__.py  tools.py
landing/: 404.html  _headers  _i18n.css  _i18n.js  _redirects  _ui-kit.css  _ui-kit.js  account.html  affiliate.html  agent-card.html  agent-preview.html  agent-runner.html  agent.html  build.html  buy-usdc.html  catalog.json  clinica.html  contact.html  contacts.html  dashboard.html  embed.js  explore.html  forge.html  index.html  login.html  loja.html  niche.html  operator.html  personas.html  privacy.html  privy-login.js  restaurante.html  signup.html  stats.html  status.html  styles.css  terms.html  upgrade.html  whatsapp.html
marketing/: demo-video-script.md  hn-show-post.md  product-hunt-kit.md  reddit-posts.md  twitter-launch-thread.md  waitlist-emails.md
mcp-server/: README.md  package.json
observability/: README.md  grafana-dashboard.json
postman/: axon.postman_collection.json
registry/: agify.json  alchemy.json  anthropic.json  apollo.json  arxiv.json  assemblyai.json  bcb.json  brasilapi.json  brave-search.json  bright-data.json  camara.json  cartesia.json  clearbit.json  cohere.json  coingecko.json  deepgram.json  deepl.json  dictionaryapi.json  exa.json  (+39 more)
sdk/python/: README.md  pyproject.toml
sdk/python/axon/: __init__.py  client.py
(+291 files in other folders)
