[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-langchain"
version = "0.1.0"
description = "LangChain tools backed by Axon — the universal API gateway for AI agents."
authors = [{ name = "Axon" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "axon-client>=0.1.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["axon_langchain*"]
