[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-pydantic-ai"
version = "0.1.0"
description = "PydanticAI tools backed by Axon."
authors = [{ name = "Axon" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "axon-client>=0.1.0",
    "pydantic-ai>=0.0.14",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["axon_pydantic_ai*"]
