[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-client"
version = "0.1.0"
description = "Official Python client for Axon — the universal API gateway for AI agents."
authors = [{ name = "Axon" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]
keywords = ["ai", "agents", "api", "gateway", "x402", "usdc", "payments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://axon-5zf.pages.dev"
Documentation = "https://axon-5zf.pages.dev/learn"
Source = "https://github.com/axondev/axon"

[tool.setuptools.packages.find]
where = ["."]
include = ["axon*"]
